# faculties

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  bootstrap.pile
.github/workflows/: release.yml
bootstrap/: 01_how_faculties_work.typ  02_wiki_style_guide.typ  03_compass_workflow.typ  05_work_as_its_own_ledger.typ  06_tool_selection.typ  07_getting_started.typ  08_files_faculty.typ  09_teams_faculty.typ  10_local_messages_faculty.typ  11_orient_faculty.typ  12_relations_faculty.typ  13_web_faculty.typ  14_research_workflow.typ  15_coordination_workflow.typ  16_auth_setup_workflow.typ  17_substrate_tribles.typ  18_substrate_pile.typ  19_substrate_merge.typ  20_substrate_architecture.typ  21_authoring_a_faculty.typ  22_harness_hooks.typ  build.sh
examples/: messages_panel.rs  pile_inspector.rs
faculties-secrets/: Cargo.toml
faculties-secrets/src/: lib.rs
hooks/codex/: README.md  orient_prompt_submit.sh  orient_session_start.sh  orient_stop.sh
src/: lib.rs  mail_account.rs  memory_cover.rs  nomic.rs
src/schemas/: archive.rs  body.rs  compass.rs  decide.rs  discord.rs  embeddings.rs  files.rs  gauge.rs  headspace.rs  local_messages.rs  mail.rs  memory.rs  message.rs  mod.rs  orient.rs  patience.rs  planner.rs  reason.rs  relations.rs  selfimage.rs  status.rs  teams.rs  triage.rs  web.rs  wiki.rs
src/widgets/: atlas.rs  compass.rs  decide.rs  discord.rs  files.rs  gauge.rs  headspace.rs  mail.rs  memory.rs  messages.rs  mod.rs  planner.rs  relations.rs  review.rs  (+3 more)
tests/: archive_index_parallel.rs  archive_search_fastpath.rs  compass_note_ledger.rs
